--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href='style.css'> 
 	<meta name="author" content="Duy H Truong">
 	<meta name="viewport" content="width=device-width">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 </head>
 
 <body>
@@ -29,27 +30,50 @@
 	</div>
 
 	<div class='bgtest2'>
-		<p>about</p>
-		<p>THE GRUB STORY.
-Est. 2012
+		<h1>THE GRUB STORY</h1>
+		<p>Est. 2012</p>
+		<br>
+		<p class='aboutpara'>
+
 We believe in the space between… when you’re not so busy DOING that you have time for laughing out loud, small moments, and big dreams. So be yourself and enjoy the ride.</p>
 	</div>
 	<div class='bgtest3'>
-		<p>menu</p>
-		<p>burgers<p>
-			<p>shakes<p>
-				<p>sandwiches</p>
-				<p>menu pdf here</p>
+		<h1>About Our Food</h1>
+		<div class='foodlist'>
+			
+			<img src='vege.png' class='foodbadge'/>
+			<p> Vegetarian Options</p>
+			<img src='bun.png' class='foodbadge'/>
+			<p>Buns baked fresh every hour</p>
+			<img src='burger.png' class='foodbadge'/>
+			<p>Signature blend of 100% fresh ground beef</p>
+			<img src='sauce.png' class='foodbadge'/>
+			<p>Homemade sauces and dressings</p>
+		</div>
 	</div>
 	<div class='bgtest4'>
-		<p>
-		contact
-		</p>
-		<p>address: 785 Lawrence Expressway Santa Clara, CA 95051<p>
+		<div class='footerflex'>
+		<div class='footerflex1'>
+		<p>785 Lawrence Expressway</p> 
+			<p>Santa Clara, CA 95051</p>
 			<p>(408)-400-3374</p>
-			<p>santaclara@grubbubrgerbar.com</p>
-			<p> hours</p>
-			<p> social media<p>
+		</div>
+		<div class='footerflex2'>
+		<p>HOURS</p>
+		
+		<div class='hourflex'>
+		<div class='hourflex1'>
+		<p>Sun-Thurs</p>	
+		<p>Fri-Sat</p>
+		</div>
+		<div class='hourflex2'> 
+		<p>11:00am-10:00pm</p>		
+		<p>11:00am-11:00pm</p>
+		</div>
+		</div>
+	</div>
+	</div>
+
 	</div>
 </body>
 
