--- a/index.html
+++ b/index.html
@@ -9,27 +9,30 @@
 	<meta name="author" content="Duy H Truong">
 	<meta name="viewport" content="width=device-width">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+
 </head>
 
 <body>
 	<div class='bgtest'>
 		<div class='nav-container'>
 			<div class='left-nav'>
-				<p class='logo'>logo</p>
+				<p class='logo'></p>
 			</div>
 
 			<div class='right-nav'>
 				<ul>
-					<li>about</li>
-					<li>menu</li>
-					<li>contact</li>
+					<li class='navlink'><a href="#aboutlink">ABOUT</a></li>
+					<li class='navlink'><a href="#menulink">MENU</a></li>
+					<li class='navlink'><a href="#contactlink">CONTACT</a></li>
 				</ul>
 			</div>
 		</div>
-		<p class="title">grub burger<p>
+		<div class='title'>
+			<img src='title3.png' class='titleimg'/>
+		</div>
 	</div>
 
-	<div class='bgtest2'>
+	<div class='bgtest2' id='aboutlink'>
 		<h1>THE GRUB STORY</h1>
 		<p>Est. 2012</p>
 		<br>
@@ -37,7 +40,7 @@
 
 We believe in the space between… when you’re not so busy DOING that you have time for laughing out loud, small moments, and big dreams. So be yourself and enjoy the ride.</p>
 	</div>
-	<div class='bgtest3'>
+	<div class='bgtest3' id='menulink'>
 		<h1>About Our Food</h1>
 		<div class='foodlist'>
 			
@@ -51,7 +54,7 @@ We believe in the space between… when you’re not so busy DOING that you have
 			<p>Homemade sauces and dressings</p>
 		</div>
 	</div>
-	<div class='bgtest4'>
+	<div class='bgtest4' id='contactlink'>
 		<div class='footerflex'>
 		<div class='footerflex1'>
 		<p>785 Lawrence Expressway</p> 
@@ -74,7 +77,22 @@ We believe in the space between… when you’re not so busy DOING that you have
 	</div>
 	</div>
 
+
+
+<div class='footer'>
+	<div class='buttons'>
+		<a href="https://www.instagram.com/dhtruong" class="fa fa-instagram" target="_blank"></a>
+		<a href="mailto:duytruongh@gmail.com" class="fa fa-envelope" target="_blank"></a>
 	</div>
+	
+</div>
+
+
+
+	</div>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src='script.js'></script>
 </body>
 
 </html>
