--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="author" content="Duy H Truong">
 	<meta name="viewport" content="width=device-width">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bangers|Permanent+Marker" rel="stylesheet">
 
 </head>
 
@@ -51,11 +52,11 @@ We believe in the space between… when you’re not so busy DOING that you have
 			<div class='foodlist'>
 			
 				<img src='saladabout.png' class='foodbadge'/>
-				<p> Vegetarian Options</p>
+				<p> VEGETARIAN OPTIONS</p>
 				<img src='bunsabout.png' class='foodbadge'/>
-				<p>Buns baked fresh every hour</p>
+				<p>BUNS BAKED EVERY HOUR</p>
 				<img src='burgerabout.png' class='foodbadge'/>
-				<p>Signature blend of 100% fresh ground beef</p>
+				<p>100% FRESH GROUND BEEF</p>
 			</div>
 			<br>
 			<br>
