--- a/index.html
+++ b/index.html
@@ -50,13 +50,18 @@ We believe in the space between… when you’re not so busy DOING that you have
 				<h1>ABOUT OUR FOOD </h1>
 			</div>
 			<div class='foodlist'>
-			
+				<div>
 				<img src='saladabout.png' class='foodbadge'/>
 				<p> VEGETARIAN OPTIONS</p>
+			</div>
+			<div>
 				<img src='bunsabout.png' class='foodbadge'/>
 				<p>BUNS BAKED EVERY HOUR</p>
+			</div>
+			<div>
 				<img src='burgerabout.png' class='foodbadge'/>
 				<p>100% FRESH GROUND BEEF</p>
+			</div>
 			</div>
 			<br>
 			<br>
@@ -68,43 +73,43 @@ We believe in the space between… when you’re not so busy DOING that you have
 		</div>
 	</div>
 	<div class='bgtest4' id='contactlink'>
-		
-
+		<div class='join'>
+			<img src='join.png'/>
+		</div>
 		<div class='footerflex'>
-		<img src='join.png' class='join'/>
-		<h1>Santa Clara </h1>
-		<div class='footerflex1'>
-
-		<p>785 Lawrence Expressway</p> 
-			<p>Santa Clara, CA 95051</p>
-			<p>(408)-400-3374</p>
+			
+			
+			<div class='footerflex1'>
+				<h1>Santa Clara </h1>
+				<p>785 Lawrence Expressway</p> 
+				<p>Santa Clara, CA 95051</p>
+				<p>(408)-400-3374</p>
+			</div>
+			
+			<div class='footerflex2'>
+				<h1>We're Open</h1>
+				<div class='hourflex'>
+					<div class='hourflex1'>
+						<p>Monday</p>	
+						<p>Tuesday</p>
+						<p>Wednesday</p>
+						<p>Thursday</p>
+						<p>Friday</p>
+						<p>Saturday</p>
+						<p>Sunday</p>
+					</div>
+					<div class='hourflex2'> 
+						<p>11:00am-10:00pm</p>
+						<p>11:00am-10:00pm</p>
+						<p>11:00am-10:00pm</p>
+						<p>11:00am-10:00pm</p>
+						<p>11:00am-11:00pm</p>	
+						<p>11:00am-11:00pm</p>
+						<p>11:00am-10:00pm</p>
+					</div>
+				</div>
+			</div>
 		</div>
-		<h1>We're Open</h1>
-		<div class='footerflex2'>
-		
-		
-		<div class='hourflex'>
-		<div class='hourflex1'>
-		<p>Monday</p>	
-		<p>Tuesday</p>
-		<p>Wednesday</p>
-		<p>Thursday</p>
-		<p>Friday</p>
-		<p>Saturday</p>
-		<p>Sunday</p>
-		</div>
-		<div class='hourflex2'> 
-		<p>11:00am-10:00pm</p>
-		<p>11:00am-10:00pm</p>
-		<p>11:00am-10:00pm</p>
-		<p>11:00am-10:00pm</p>
-		<p>11:00am-11:00pm</p>	
-		<p>11:00am-11:00pm</p>
-		<p>11:00am-10:00pm</p>
-		</div>
-		</div>
-	</div>
-	</div>
 
 
 
